# library

./: .gitignore
boost/: main.cpp  matem.cpp
boost/chars/: matem.cpp  matem.h
cmake/: CMakeLists.txt  testing.cpp
cmake_gtest/: CMakeLists.txt  main.cpp  programm.cpp  programm.h  testing.cpp
cmake_multiple_bound/: CMakeLists.txt  main.cpp
cmake_multiple_bound/test/: CMakeLists.txt  testing.cpp  testing.h
cmake_multiple_unbound/: CMakeLists.txt  main.cpp
cmake_multiple_unbound/test/: CMakeLists.txt  testing.cpp  testing.h
console_test/: main.cpp
threading/: main.cpp  simpleTimer.h
winapi/: main.cpp
